--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "fs": "^0.0.1-security",
     "inquire": "^0.4.8",
+    "inquirer": "^8.2.2",
     "jest": "^27.5.1",
     "node": "^17.7.2"
   }
